		Formal Assessment: fixed uploaded response file selector gigantism issue
		Library: added item count column to lending log
		Library: added count of records to Manage Catalog
		Library: removed required status from ISBN10 field in Print Publication
		Library: added Condition field to allow tracking of the physical state of an asset
		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
		Markbook: fixed uploaded response file selector gigantism issue
		Markbook: added line break display to full comment in various viewing locations
		Planner: fixed surplus slash issue in Crowd Assessment settings in Lesson Planner add page
		Planner: fixed style mismatch in Guest section of lesson planner full view
		Planner: attendance alignment tweak
		Planner: fixed bug preventing parent access to lesson listings
		Rubrics: added course/class name to historical view result listing
		School Admin: fixed bug preventing non-contiguous primary external assessment settings from being saved in Formal Assessment settings
		Staff: adjusted role drop down to offer all Staff roles (from gibbonRole), not just Teaching & Support
		Students: added year group to New Students report when using Date Range setting 
		Students: added All Students filter persistence to Back To Search link on student details page
		Students: made more fields searchable in full profile
		Students: fixed bug preventing student images from showing up on History tab of student profile
		Students: added Student History into Overview page of full student profile
		Timetable: fixed rendering to allow Sunday as first day or the week, according to values in gibbonDaysOfWeek
		Tracking: adjusted Data Points export to combine multiple column internal assessments for one subject into a column
		User Admin: added notification to form tutor(s) when a student's privacy options change (via Edit or Data Update).		
		User Admin: made max_input_vars test a little more generous