@@ -487,7 +487,32 @@ else {
 						</td>
 					</tr>
 					
-					<tr id='gibbonSchoolYearIDReplacement'>
+					<script type="text/javascript">
+						$(document).ready(function(){
+							$("#replacement").change(function(){
+								if ($('#replacement option:selected').val()=="Y" ) {
+									$("#gibbonSchoolYearIDReplacementRow").slideDown("fast", $("#gibbonSchoolYearIDReplacementRow").css("display","table-row")); 
+									$("#replacementCostRow").slideDown("fast", $("#replacementCostRow").css("display","table-row")); 
+								}
+								else {
+									$("#gibbonSchoolYearIDReplacementRow").css("display","none");
+									$("#replacementCostRow").css("display","none");
+								}
+							 });
+						});
+					</script>
+					<tr id='replacementRow'>
+						<td> 
+							<b><?php print __($guid, 'Plan Replacement?') ?> *</b><br/>
+						</td>
+						<td class="right">
+							<select name="replacement" id="replacement" style="width: 302px">
+								<option <?php if ($row["replacement"]=="N") { print "selected" ; } ?> value="N"><?php print ynExpander($guid, 'N') ?></option>
+								<option <?php if ($row["replacement"]=="Y") { print "selected" ; } ?> value="Y"><?php print ynExpander($guid, 'Y') ?></option>
+							</select>
+						</td>
+					</tr>
+					<tr id='gibbonSchoolYearIDReplacementRow' <?php if ($row["replacement"]=="N") { print "style='display: none'" ; } ?>>
 						<td> 
 							<b><?php print __($guid, "Replacement Year") ; ?></b><br/>
 							<span style="font-size: 90%"><i><?php print __($guid, 'When is this item scheduled for replacement.') ?></i></span>
@@ -514,7 +539,7 @@ else {
 							</select>
 						</td>
 					</tr>
-					<tr id='replacementCostRow'>
+					<tr id='replacementCostRow' <?php if ($row["replacement"]=="N") { print "style='display: none'" ; } ?>>
 						<td> 
 							<b><?php print __($guid, "Replacement Cost") ; ?></b><br/>
 							<span style="font-size: 90%">
