@@ -63,6 +63,7 @@ v12.0.00
 		Library: added count of records to Manage Catalog
 		Library: removed required status from ISBN10 field in Print Publication
 		Library: added Condition field to allow tracking of the physical state of an asset
+		Library: added field to indicate whether an item will be replaced or not
 		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
 		Markbook: fixed uploaded response file selector gigantism issue
 		Markbook: added line break display to full comment in various viewing locations
